clusters/production/automation/home-assistant/home-assistant-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-home-assistant
  namespace: default
spec:
  type: ExternalName
  externalName: homeassistant.local 
  ports:
  - port: 8123
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-assistant-ingress  
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.org/websocket-services: home-assistant
spec:
  ingressClassName: nginx
  rules:
  - host: ha.rees.ca
    http:
      paths:
        - backend:
            service:
              name: external-home-assistant
              port:
                number: 8123
          path: /
          pathType: Prefix
  tls:
  - hosts:
    - ha.rees.ca
    secretName: ha-tls-secret
status:
  loadBalancer:
    ingress:
    - ip: 10.0.0.240
