clusters/production/automation/home-assistant/vaultwarden-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: default
spec:
  parentRefs:
  - name: external
    namespace: gateway
    sectionName: https
  hostnames:
  - vaultwarden.rees.ca
  rules:
  - backendRefs:
    - name: external-vaultwarden
      port: 7277
